styles/common-template.css
/* ... */
/* the following rules required while item-rows highlighting */
.rounded_rect_tbl > tr:first-child td:first-child { border-radius: 10px 0px 0px 0px; -moz-border-radius: 10px 0px 0px 0px; -webkit-border-radius: 10px 0px 0px 0px; }
.rounded_rect_tbl > tr:first-child td:last-child { border-radius: 0px 10px 0px 0px; -moz-border-radius: 0px 10px 0px 0px; -webkit-border-radius: 0px 10px 0px 0px; }
.rounded_rect_tbl > tr:last-child td:first-child { border-radius: 0px 0px 0px 10px; -moz-border-radius: 0px 0px 0px 10px; -webkit-border-radius: 0px 0px 0px 10px; }
.rounded_rect_tbl > tr:last-child td:last-child { border-radius: 0px 0px 10px  0px; -moz-border-radius: 0px 0px 10px  0px; -webkit-border-radius:  0px 0px 10px 0px; }

.rounded_rect_tbl #front {background-color: &[BackgroundColor];}

#common_filter .param_tr { cursor: pointer; height: 40px; }

.rounded_rect_tbl .param_tr .rollup_td { cursor: text; }
.rounded_rect_tbl .param_tr .rollup_td img { margin: 2px; }


.changeViewCols {
  margin: 0px 0px 0px 0px;
  padding: 0px 0px 0px 0px;

  background-color: &[PrimaryColor_4];;
  background-image: -moz-linear-gradient(top center, &[PrimaryColor_1];, &[PrimaryColor_4];);
  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(&[PrimaryColor_1];), to(&[PrimaryColor_4];));
  background-image: -o-linear-gradient(&[PrimaryColor_1];, &[PrimaryColor_4];);
  #filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=&[PrimaryColor_1];,endColorstr=&[PrimaryColor_4];);
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=&[PrimaryColor_1];,endColorstr=&[PrimaryColor_4];)";
}
.changeViewCols td.dashboard_btn:hover {  
  border-left-color: &[PrimaryColor_5];;
  border-top-color: &[PrimaryColor_5];;
  border-right-color: &[PrimaryColor_1];;
  border-bottom-color: &[PrimaryColor_1];;
}
.changeViewCols td.current {
  border-left-color: &[PrimaryColor_1];;
  border-top-color: &[PrimaryColor_1];;
  border-right-color: &[PrimaryColor_5];;
  border-bottom-color: &[PrimaryColor_5];;
}
.changeViewCols .dashboard_btn  span { color: &[SecondaryColorA_5];; }

.viewColsTabs { color: &[PrimaryColor_3];; cursor: pointer; font-weight: bold; white-space: nowrap;}
.viewCols {background-color: &[PrimaryColor_4];}

/* ??? label + chosen_value_div */
.rounded_rect_tbl .data_td { width: 100%; }
.rounded_rect_tbl .data_td table { width: 100%; }
#dataEntry .input_td { height: 40px; width: 100%; text-align:right; padding: 0px 3px; color: &[PrimaryColor_4_text];;}
* html .data_td .input_td td { text-align:right; } /* fields alignment in IE */
.rounded_rect_tbl .option_icon_td { padding-right: 4px; }
.rounded_rect_tbl .option_icon_td img, .icon16 { width: 16px; height: 16px; }

/*.rounded_rect_tbl a { color: &[PrimaryColor_4_text];; }*/

.arrow_td, .arrow_td_empty { padding-right: 4px; min-width: 10px; font-size: 18px !important; font-weight: bold; text-align:center; cursor: pointer; }
/*.arrow_td { background-color: &[PrimaryColor_1];;}*/

.param_tr .label_td { white-space: nowrap; position: relative; } 
.param_tr .field_comment, #mkresource .field_comment { height: 55px !important; }
.param_tr .label { -moz-user-select: none; white-space: nowrap; font-size: 16px; font-weight: bold; overflow: visible; color: &[PrimaryColor_4_text];;}
.param_tr .label img { margin-right: 3px; }
.param_tr .comment { color: &[SecondaryColorB_3];; font-size: 11px; }
.param_tr .comment a { font-size: 11px; }
* html .label_td .comment { left: 0; }
* html .dat_td .comment { left: 5px; } /* hack for multivalue */
.field_comment .comment { margin-top: 5px; }

.rounded_rect_tbl .input, #register .input, .rounded_rect_tbl .isel, .rounded_rect_tbl .num, .false_input, .false_textarea, .false_empty_field { 
  margin: 0px; padding: 1px; min-height: 22px;
  color: &[PrimaryColor_4_text];; background-color: &[PrimaryColor_4];; border: 2px solid &[PrimaryColor_1];; -webkit-appearance: none; text-align: right; width: 250px; height: auto;
  font-family:Helvetica,arial,sans-serif; font-size: 1em; font-weight: normal; margin-top: 3px;
}
.rounded_rect_tbl .with_units .input { width: 150px; }
#register .input { text-align: left;  height: 25px; }

.false_input, .false_textarea { display: inline-block; text-align: left; cursor: text !important; }
.false_textarea { height: 50px; width: 500px !important; }

.rounded_rect_tbl .pointer { color: &[PrimaryColor_4_text];; }
.rounded_rect_tbl .grey_highlighting .pointer, .rounded_rect_tbl .blue_highlighting .pointer { color: &[Alternative_A];; }

.rounded_rect_tbl .textarea { color: &[PrimaryColor_4_text];; background-color: &[PrimaryColor_4];;  margin-bottom: 5px; width: 100%; border: 2px solid &[PrimaryColor_1];; font:inherit; }
.rounded_rect_tbl .select { font-size: inherit; width: 100px; height: 20px; color: &[SecondaryColorA_3];; background-color: &[PrimaryColor_5];; }

.rounded_rect_tbl input#rightPanelPropertySheet  { display: none; }
/* .rounded_rect_tbl td#dIcon { height: 40px; PADDING-RIGHT: 2px; PADDING-LEFT: 5px; PADDING-TOP: 2px; white-space: nowrap;  vertical-align: top; } */

.menuItemRow, .option_tr, #lists_container .pointer { cursor: pointer; height: 40px; }

.chosen_values {
  text-align: right;
  padding: 0px;
  width: 100%; 
  overflow: hidden;
}
#fts-sift .chosen_values { display: none; }

.chosen_values div {
  overflow: hidden;
  white-space: nowrap;
  color: &[SecondaryColorB_3];;   
  font-size: 15px; 
  font-weight: 600;
}
.grey_highlighting .chosen_values div { color: &[Alternative_A];;  }

.rounded_rect_tbl tr, #siteResourceList .rounded_rect_tbl tr { /* height: 40px; */ vertical-align: middle; }
.rounded_rect_tbl td { border-bottom: solid &[PrimaryColor_1]; 1px; }
#pane2 .rounded_rect_tbl td { border-bottom: none; }
#pane2 #dashboard td { vertical-align: top; }
#pane2 tr#dashboard td { vertical-align: middle; }

.rounded_rect_tbl tr:last-child td, #siteResourceList .rounded_rect_tbl tr:last-child td{ border-bottom: none; }
/* ... */

